--- a/eigen.tex
+++ b/eigen.tex
@@ -1975,6 +1975,7 @@ Related to the fact that we can write the generalized-eigenspace as a union in t
 		\left\{ \e ^{\lambda x},x\e ^{\lambda x},\ldots ,x^{m-2}\e ^{\lambda x},x^{m-1}\e ^{\lambda x}\right\} ,\footnote{The existence and uniqueness theorem from ordinary differential equations implies that the set of solutions is an $m$-dimensional vector space.  To find a basis, it thus suffices to exhibit $m$ linearly-independent solutions.  After staring at it for awhile, you realize that functions of the form $x^k\e ^{\lambda x}$ do the job.  (Seriously, while you might have forgotten after it's become so familiar, ultimately even the solution $\e ^{\lambda x}$ is originally found by making an educated guess.)}
 	\end{equation}
 	and hence
+	\intomargin
 	\begin{equation}
 		\Eig _{\lambda}^m=\Span \left( \e ^{\lambda x},x\e ^{\lambda x},\ldots ,x^{m-2}\e ^{\lambda x},x^{m-1}\e ^{\lambda x}\right) .
 	\end{equation}
