--- a/apd.tex
+++ b/apd.tex
@@ -1150,6 +1150,7 @@ A \term{rig}\index{Rig} is a rg such that $\coord{X,\cdot ,1}$ is a monoid, that
 \begin{rmk}
 In a rig $R$, we write
 {\footnotesize
+\intomargin
 \begin{equation}\label{eqnA.1.34}
     R^{\times}\coloneqq \left\{ r\in R:r\text{ has a multiplicative inverse.}\right\} .
 \end{equation}\index[notation]{$R^{\times}$}
@@ -2708,6 +2709,7 @@ While, in my opinion anyways, ``ring in which you can scale elements'' is by far
 			\end{split}
 		\end{equation}
 		and
+		\intomargin
 		\begin{equation}
 			\begin{split}
 				\alpha \cdot (a_1+a_2) & \ceqq \phi (\alpha)(a_1+a_2)=\phi (\alpha )a_1+\phi (\alpha )a_2 \\
@@ -2720,6 +2722,7 @@ While, in my opinion anyways, ``ring in which you can scale elements'' is by far
 		\end{equation}
 		
 		We next check \cref{KAlgebra(ii)} of \cref{KAlgebra}.  So, let $\alpha \in \K$ and $a_1,a_2\in A$.  Then,
+		\intomargin
 		\begin{equation}
 			\alpha \cdot (a_1a_2)\ceqq \phi (\alpha )(a_1a_2)=(\phi (\alpha )a_1)a_2\eqqc (\alpha \cdot a_1)a_2
 		\end{equation}
